fixed horizontal scroll

--- a/app/scss/_extensions.scss
+++ b/app/scss/_extensions.scss
@@ -1,5 +1,5 @@
 .extensions {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   &__header {
@@ -29,7 +29,7 @@
       display: grid;
       grid-template-rows: 1fr;
       grid-template-columns: repeat(5, 1fr);
-      width: 100vw;
+      width: 100%;
       height: 81.5rem;
     }
 
@@ -39,9 +39,9 @@
       justify-self: end;
     }
 
-    &__firefox{
+    &__firefox {
       grid-row: 1 / -1;
-      grid-column: 3 / 4; 
+      grid-column: 3 / 4;
       align-self: center;
     }
     &__opera {
