--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -403,7 +403,7 @@ p {
 }
 
 .extensions {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -446,7 +446,7 @@ p {
       grid-template-rows: 1fr;
   -ms-grid-columns: (1fr)[5];
       grid-template-columns: repeat(5, 1fr);
-  width: 100vw;
+  width: 100%;
   height: 81.5rem;
 }
 
